test/1.2/errors/T_ECONSTP.dml
/*
  © 2021-2022 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;

extern void foo(char *str);

method m(char *str) {
}

method init {
    local const char *s = "";
    /// ERROR ECONSTP
    foo(s);
    /// ERROR ECONSTP
    call $m(s);
    /// ERROR ECONSTP
    inline $m(s);
}
